--- a/model/data_cleaning.ipynb
+++ b/model/data_cleaning.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_to_data = \"./rawData/\"\n",
+    "path_to_data = \"./images/\"\n",
     "path_to_cr_data = \"./dataset/\""
    ]
   },
